# image_fusion

./: .gitignore  CMakeLists.txt  package.xml
calibration_files/: error.txt  firefly_left.yaml  firefly_right.yaml  ximea.yaml  zed_left.yaml  zed_right.yaml
calibration_files_ros/: ximea.yaml
calibration_files_small/: firefly_left.yaml  zed_left.yaml  zed_right.yaml
data/: 1739373925_363698530_ximea.tif
data/calibration/rosbag_2025-03-14_18-07-51/: metadata.yaml
demo_data/firefly/: K.txt
demo_data/raw/: 1739373925_363698530_firefly_left.tif  1739373925_363698530_firefly_right.tif
include/image_fusion/: bag_time_reader.hpp
scripts/: bag_to_images.py  camera_calibrate.py  display_cloud.py  extrinsics.py  firefly_pointcloud_defaultstereo.py  firefly_pointcloud_foundationstereo.py  firefly_rectification.py  fs_demo.py  generate_board.py  multi_cam_bag_reader.py  multi_cam_calibration.py  reproject.py  test.py  test.txt  utils.py
scripts/clouds/: display_cloud.py  firefly_pointcloud_defaultstereo.py
scripts/demos/: demo_dino_matching.py  demo_sam.py
scripts/feature_matching/: match.py
scripts/old/: display_cloud.py  firefly_pointcloud_defaultstereo.py
src/: bag_time_reader.cpp  extrinsics.cpp  reproject.py  utils.py
src/demosaic/: extract_band.py
