<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>image_fusion</name>
    <version>0.1.0</version>
    <description>Image fusion for multi modal detection</description>
    <maintainer email="hayden4feddock@gmail.com">Hayden Feddock</maintainer>
    <license>Apache-2.0</license>

    <!-- Build tools -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Build dependencies -->
    <build_depend>rclcpp</build_depend>
    <build_depend>OpenCV</build_depend>

    <!-- Execution dependencies -->
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>OpenCV</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
    </package>
